Fix phone feed select z-index and captilize phone page names

--- a/src/components/HomeHeaderPhone/HomeHeaderPhone.module.scss
+++ b/src/components/HomeHeaderPhone/HomeHeaderPhone.module.scss
@@ -16,6 +16,7 @@
   justify-content: space-between;
   /* padding-inline: 16px; */
   padding-top: 4px;
+  z-index: 15;
 }
 
 .logo {
