--- a/src/components/PageCaption/PageCaption.module.scss
+++ b/src/components/PageCaption/PageCaption.module.scss
@@ -53,6 +53,10 @@
     justify-content: flex-start;
     align-items: center;
     padding-left: 20px;
+
+    .title {
+      text-transform: capitalize;
+    }
   }
 
   .logo {
